'changement-remplacement-des-images-et-fonts'

--- a/orphelinat.html
+++ b/orphelinat.html
@@ -10,7 +10,7 @@
     <header>
         <nav class="menu-bar">
             <div class="logo">
-                <img src="Logo.png" alt="logo de l'orphelinat">
+                <img src="image/Logo.png" alt="logo de l'orphelinat">
             </div>
             <input type="checkbox" id="menu-toggle">
             <label for="menu-toggle" class="menu-toggle">&#9776;</label>
@@ -42,7 +42,7 @@
     </section>
         <section class="hero-section1">
            
-                <img src="IMG_2286.JPG" alt="image">
+                <img src="image/IMG_2286.JPG" alt="image">
             <p>Cree en 2003 a Monaco, HelpTheChildren a pour vocation de fournir un environnement stable et securise pour les enfants orphelins ou abandonnes.<br>
                 Nous sommes une organisation dédiée à offrir un foyer chaleureux, sûr et aimant aux enfants les plus vulnérables de notre société. Depuis notre création, nous travaillons avec passion pour transformer la vie des enfants orphelins, abandonnés ou en situation difficile, en leur donnant l’amour, le soutien et les opportunités dont ils ont besoin pour s’épanouir.<br>
                 Notre équipe est composée de bénévoles, d’éducateurs, de travailleurs sociaux et de partenaires dévoués. Ensemble, nous travaillons sans relâche pour offrir un soutien holistique à nos enfants, allant bien au-delà des besoins fondamentaux. Nous croyons que l’amour, la patience et l’éducation sont les clés pour transformer les vies.<br>
@@ -55,7 +55,7 @@
     <section class="hero-section2">
         <h1 id="don" class="donation-title">Contribuez a l'epanouissement de ces enfants !<br></h1>
         <div class="donation-content">
-            <img src="stock-photo-love-and-care-concept-closeup-above-top-view-of-unrecognizable-african-american-man-and-girl-1922213888.jpg" alt="image de dons" class="donation-image">
+            <img src="image/stock-photo-love-and-care-concept-closeup-above-top-view-of-unrecognizable-african-american-man-and-girl-1922213888.jpg" alt="image de dons" class="donation-image">
             <div class="donation-text">
                 <p>Chaque don, petit ou grand, permet de transformer la vie des enfants. En participant, vous contribuez directement a leureducation, leur bien-etre et leur avenir.<br>
                     Vous pouvez faire don financier ou/et materiels ou devenir parrain ou marraire d’un enfant.<br>
@@ -70,17 +70,17 @@
     </section>
     <section class="donation-end"><p>Vos dons sont utilises pour financer des projets concret, tels que l’achat de fournitures scolaires, les repas quotidiens et les activites educatives.<br></p></section>
     <section id="evenements" class="events-section">
-        <h1>Participez a des evevements et contribuez a creer un avenir meilleur pour les enfants</h1>
+        <h1>Participez a des evevements et contribuez a creer un avenir meilleur pour les enfants !</h1>
         <div class="events-grid">
             <div class="event">
                 <p class="slide-in-left">
                     <strong>Journee de solidarite (25 decembre 2024) :</strong>
                     Distribution de cadeaux et activites festives avec les enfants.
                 </p>
-                <img src="pexels-cottonbro-6185572.jpg" alt="Journee de solidarite" class="fade-in">
+                <img src="image/pexels-cottonbro-6185572.jpg" alt="Journee de solidarite" class="fade-in">
             </div>
             <div class="event">
-                <img src="IMG_2287.JPG" alt="marathon" class="fade-in">
+                <img src="image/IMG_2287.JPG" alt="marathon" class="fade-in">
                 <p class="slide-in-left">
                     <strong>Marathon pour l'espoir (15 novembre 2024) :</strong><br>
                     Collecte de fonds pour financer l'education des enfants.
@@ -91,10 +91,10 @@
                     <strong>Une viree en piscine :</strong><br>
                     Partage et eclat de rire garantis, une journee de detente et de jeux.
                 </p>
-                <img src="IMG_2297.JPG" alt="piscine">
+                <img src="image/IMG_2297.JPG" alt="piscine">
             </div>
             <div class="event">
-                <img src="IMG_2298.JPG" alt="couleur" class="fade-in">
+                <img src="image/IMG_2298.JPG" alt="couleur" class="fade-in">
             <p class="slide-in-right">
                 <strong>Journee de la couleur :</strong><br>
                 Un evenement memorable, joie et bonne humeur etaient presents
