--- a/orphelinat.html
+++ b/orphelinat.html
@@ -43,7 +43,7 @@
         <section class="hero-section1">
            
                 <img src="image/IMG_2286.JPG" alt="image">
-            <p>Cree en 2003 a Monaco, HelpTheChildren a pour vocation de fournir un environnement stable et securise pour les enfants orphelins ou abandonnes.<br>
+            <p>Cree en 2003 a Faladie, HelpTheChildren a pour vocation de fournir un environnement stable et securise pour les enfants orphelins ou abandonnes.<br>
                 Nous sommes une organisation dédiée à offrir un foyer chaleureux, sûr et aimant aux enfants les plus vulnérables de notre société. Depuis notre création, nous travaillons avec passion pour transformer la vie des enfants orphelins, abandonnés ou en situation difficile, en leur donnant l’amour, le soutien et les opportunités dont ils ont besoin pour s’épanouir.<br>
                 Notre équipe est composée de bénévoles, d’éducateurs, de travailleurs sociaux et de partenaires dévoués. Ensemble, nous travaillons sans relâche pour offrir un soutien holistique à nos enfants, allant bien au-delà des besoins fondamentaux. Nous croyons que l’amour, la patience et l’éducation sont les clés pour transformer les vies.<br>
                 Nous avons comme valeur, de croire que l’education est la cle d’un avenir meilleur.<br>
@@ -74,33 +74,84 @@
         <div class="events-grid">
             <div class="event">
                 <p class="slide-in-left">
-                    <strong>Journee de solidarite (25 decembre 2024) :</strong>
+                    <strong>Journee de solidarite (25 decembre 2024) :</strong><br>
                     Distribution de cadeaux et activites festives avec les enfants.
                 </p>
                 <img src="image/pexels-cottonbro-6185572.jpg" alt="Journee de solidarite" class="fade-in">
-            </div>
+            </div><br>
             <div class="event">
                 <img src="image/IMG_2287.JPG" alt="marathon" class="fade-in">
-                <p class="slide-in-left">
+                <p class="slide-in-right">
                     <strong>Marathon pour l'espoir (15 novembre 2024) :</strong><br>
                     Collecte de fonds pour financer l'education des enfants.
                 </p>
-            </div>
+            </div><br>
             <div class="event">
                 <p class="slide-in-left">
                     <strong>Une viree en piscine :</strong><br>
                     Partage et eclat de rire garantis, une journee de detente et de jeux.
                 </p>
                 <img src="image/IMG_2297.JPG" alt="piscine">
-            </div>
+            </div><br>
             <div class="event">
                 <img src="image/IMG_2298.JPG" alt="couleur" class="fade-in">
             <p class="slide-in-right">
                 <strong>Journee de la couleur :</strong><br>
                 Un evenement memorable, joie et bonne humeur etaient presents
             </p>
-            </div>
+            </div><br>
         </div>
     </section>
+
+    <section id="contact" class="contact-section">
+        <h1>Vous avez une question ? Une suggestion ? Ou souhaitez simplement nous rendre visite ? Nous sommes à votre écoute.</h1>
+        <div class="contact-container">
+          <form class="contact-form">
+            <div class="form-group">
+              <input type="text" placeholder="Votre nom">
+              <input type="email" placeholder="Votre Email">
+            </div>
+            <input type="text" placeholder="Sujet">
+            <textarea placeholder="Message"></textarea>
+            <button type="submit">Envoyer</button>
+          </form>
+          <div class="contact-info">
+            <p><i>&#9993;</i> HelpTheChildren@gmail.com</p>
+            <p><i>&#9742;</i> +223 45451212</p>
+            <p><i>&#127968;</i> Faladie, Bamako</p>
+            <p><i>&#128337;</i> Lundi au Samedi / 9h-17h</p>
+          </div>
+        </div>
+      </section>
+
+      <section id="galerie" class="galerie-section">
+      <h1>Notre album</h1>
+      <div class="galerie-grid">
+        <div class="item item1"><img src="image/IMG_2290.JPG" alt="1"></div>
+        <div class="item item2"><img src="image/IMG_2289.JPG" alt="2"></div>
+        <div class="item item3"><img src="image/IMG_2282.WEBP" alt="3"></div>
+        <div class="item item4"><img src="image/IMG_2293.JPG" alt="4"></div>
+        <div class="item item5"><img src="image/IMG_2283.JPG" alt="5"></div>
+        <div class="item item6"><img src="image/IMG_2285.JPG" alt="6"></div>
+        <div class="item item7"><img src="image/IMG_2292.JPG" alt="7"></div>
+        <div class="item item8"><img src="image/IMG_2284.JPG" alt="8"></div>
+      </div>
+      <p class="description">HelpTheChildren <br>
+    Construire un avenir meilleur pour chaque enfant <br></p>
+</section>
 </body>
+<footer>
+    <div class="footer-logo">
+        <img src="image/Logo.png" alt="logo">
+    </div>
+    <div class="footer-icone">
+        <img src="image/youtube.png" alt="youtube">
+        <img src="image/facebook.png" alt="facebook">
+        <img src="image/instagram.png" alt="instagram">
+        <img src="image/twitter.png" alt="twitter">
+    </div>
+    <div class="footer-copyright">    
+    <h2>Copyright ©2024 Tous droits réservés | Ce template a été realisé par Mhd Tbd. <br><br></h2>
+    </div>
+</footer>
 </html>
