--- a/orphelinat.html
+++ b/orphelinat.html
@@ -135,6 +135,8 @@
         <div class="item item6"><img src="image/IMG_2285.JPG" alt="6"></div>
         <div class="item item7"><img src="image/IMG_2292.JPG" alt="7"></div>
         <div class="item item8"><img src="image/IMG_2284.JPG" alt="8"></div>
+        <div class="item item9"><video controls autoplay loop muted src="image/v09044g40000cf73bvbc77u9ukbg0b5g.mov" alt="9"></video></div>
+        <div class="item item10"><video controls autoplay loop muted src="image/v09044g40000cq1vrs7og65hefldi8ng.mov" alt="10"></video></div>
       </div>
       <p class="description">HelpTheChildren <br>
     Construire un avenir meilleur pour chaque enfant <br></p>
