--- a/orphelinat.html
+++ b/orphelinat.html
@@ -12,7 +12,7 @@
             <div class="logo">
                 <img src="image/Logo.png" alt="logo de l'orphelinat">
             </div>
-            <input type="checkbox" id="menu-toggle">
+            <input type="checkbox" class="menu-tog" id="menu-toggle">
             <label for="menu-toggle" class="menu-toggle">&#9776;</label>
             <ul class="menu">
                 <li><a href="#accueil">Accueil</a></li>
@@ -42,7 +42,7 @@
     </section>
         <section class="hero-section1">
            
-                <img src="image/IMG_2286.JPG" alt="image">
+                <img src="image/IMG_2286.JPG" alt="image" class="apropos-image">
             <p>Cree en 2003 a Faladie, HelpTheChildren a pour vocation de fournir un environnement stable et securise pour les enfants orphelins ou abandonnes.<br>
                 Nous sommes une organisation dédiée à offrir un foyer chaleureux, sûr et aimant aux enfants les plus vulnérables de notre société. Depuis notre création, nous travaillons avec passion pour transformer la vie des enfants orphelins, abandonnés ou en situation difficile, en leur donnant l’amour, le soutien et les opportunités dont ils ont besoin pour s’épanouir.<br>
                 Notre équipe est composée de bénévoles, d’éducateurs, de travailleurs sociaux et de partenaires dévoués. Ensemble, nous travaillons sans relâche pour offrir un soutien holistique à nos enfants, allant bien au-delà des besoins fondamentaux. Nous croyons que l’amour, la patience et l’éducation sont les clés pour transformer les vies.<br>
