mise en place des commentaire

--- a/orphelinat.html
+++ b/orphelinat.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!--Barre de Menu-->
     <header>
         <nav class="menu-bar">
             <div class="logo">
@@ -24,6 +25,7 @@
             </ul>
         </nav>
     </header>
+      <!--Section acceuil-->
     <section id="accueil" class="hero-section">
         <div class="hero-content">
 <h1>Bienvenue a<br>
@@ -36,6 +38,7 @@
         Grace a votre soutien, nous transformons des vies chaque jour.</p>
     </div>
     </section>
+      <!--Section a propos-->
     <div>
         <section id="apropos" class="hero-section1title">
        <h2>Qui sommes-nous ?<br></h2>
@@ -52,6 +55,7 @@
                 Nous offrons un refuge sur a tous les enfants.<br></p>
         </section>
     </div>
+      <!--Section don-->
     <section class="hero-section2">
         <h1 id="don" class="donation-title">Contribuez a l'epanouissement de ces enfants !<br></h1>
         <div class="donation-content">
@@ -69,6 +73,7 @@
         </div>
     </section>
     <section class="donation-end"><p>Vos dons sont utilises pour financer des projets concret, tels que l’achat de fournitures scolaires, les repas quotidiens et les activites educatives.<br></p></section>
+      <!--Section evenement-->
     <section id="evenements" class="events-section">
         <h1>Participez a des evevements et contribuez a creer un avenir meilleur pour les enfants !</h1>
         <div class="events-grid">
@@ -102,7 +107,7 @@
             </div><br>
         </div>
     </section>
-
+  <!--Section contact-->
     <section id="contact" class="contact-section">
         <h1>Vous avez une question ? Une suggestion ? Ou souhaitez simplement nous rendre visite ? Nous sommes à votre écoute.</h1>
         <div class="contact-container">
@@ -123,7 +128,7 @@
           </div>
         </div>
       </section>
-
+  <!--Section galerie-->
       <section id="galerie" class="galerie-section">
       <h1>Notre album</h1>
       <div class="galerie-grid">
@@ -142,6 +147,7 @@
     Construire un avenir meilleur pour chaque enfant <br></p>
 </section>
 </body>
+  <!--Footer-->
 <footer>
     <div class="footer-logo">
         <img src="image/Logo.png" alt="logo">
