--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <section class="donation-end"><p>Vos dons sont utilises pour financer des projets concret, tels que l’achat de fournitures scolaires, les repas quotidiens et les activites educatives.<br></p></section>
       <!--Section evenement-->
     <section id="evenements" class="events-section">
-        <h1>Participez a des evevements et contribuez a creer un avenir meilleur pour les enfants !</h1>
+        <h1>Participez a des evenements et contribuez a creer un avenir meilleur pour les enfants !</h1>
         <div class="events-grid">
             <div class="event">
                 <p class="slide-in-left">
